[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://images/Startbild_Zeichenfl√§che 1.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/Curvy Thins.tres" type="DynamicFont" id=3]
[ext_resource path="res://audio/music/virginians-nothing-could-be-sweeter-from-hit-the-deck.ogg" type="AudioStream" id=4]

[node name="Panel" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Grow Direction", "Rect", "Theme" ]

[node name="level_preview" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="logo" type="TextureRect" parent="level_preview" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Anchor" ]

[node name="Button_play" type="Button" parent="." index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 74.0
margin_top = -438.0
margin_right = 264.0
margin_bottom = -378.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "start"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Rect", "custom_colors", "custom_fonts" ]

[node name="Button_select" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 72.0
margin_top = -352.0
margin_right = 262.0
margin_bottom = -292.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "select level"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Button_quit" type="Button" parent="." index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 72.0
margin_top = -263.0
margin_right = 262.0
margin_bottom = -203.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "quit"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "custom_colors", "custom_fonts" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"


